Closed
Bug 1569258
Opened 6 years ago
Closed 6 years ago
Stopping composition recorder will crash if it hasn't already started
Categories
(Core :: Performance: General, defect)
Core
Performance: General
Tracking
()
VERIFIED
FIXED
mozilla70
| Tracking | Status | |
|---|---|---|
| firefox70 | --- | verified |
People
(Reporter: beth, Assigned: beth)
Details
Attachments
(1 file)
STR:
- Open the browser console
windowUtils.setCompositionRecording(false)
ER:
An error / warning should be displayed
AR:
A crash.
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → brennie
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•6 years ago
|
||
Instead of blindly attempting to write frames to disk, we now ensure that the
CompositionRecorder exists. In the case where we have not allocated one,
calling windowUtils.setCompositionRecording(false) will instead print an
error message to the browser console.
In addition, attempting to call windowUtils.setCompositionRecording(true)
while a CompositionRecorder exists will also result in an error message.
| Assignee | ||
Updated•6 years ago
|
Component: Graphics: Layers → Performance
Pushed by brennie@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/be7ab9301044
Ensure we have a CompositionRecorder before attempting to write frames r=kvark,mstange
Comment 3•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox70:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Updated•6 years ago
|
Flags: qe-verify+
Comment 4•6 years ago
|
||
Following the STR from the first comment, I managed to reproduce the issue on nightly 70.0a1 (2019-07-22).
I can confirm that the issue is fixed in 70.0b6.
You need to log in
before you can comment on or make changes to this bug.
Description
•